styles/audio.css
.h5p-audio-inner {
  height: 100%;
  width: 100%;
  background-color: var(--h5p-theme-ui-base);
}

.h5p-course-presentation .h5p-element.h5p-audio-wrapper {
  overflow: visible !important;
}

.h5p-audio-inner .h5p-audio-minimal-button {
  font-family: 'h5p-theme';
  display: block;
  padding: var(--h5p-theme-spacing-s);
  font-size: var(--h5p-theme-font-size-l);
  border: 0.1em solid var(--h5p-theme-main-cta-base);
  border-radius: 50%;
  cursor: pointer;
  color: var(--h5p-theme-contrast-cta);
  text-decoration: none;
  transition: all 0.1s linear 0s;
  background: var(--h5p-theme-main-cta-base);
}

.h5p-audio-inner .h5p-audio-minimal-button:hover {
  cursor: pointer;
  background: var(--h5p-theme-main-cta-light);
  border-color: var(--h5p-theme-main-cta-light);
  box-shadow: 5px 5px 10px 2px rgba(0, 0, 0, 0.1);
}

.h5p-audio-inner .h5p-audio-minimal-button:focus-visible {
  outline: 2px ridge var(--h5p-theme-contrast-cta-white);
  outline-offset: 2px;
}

.h5p-audio-inner .h5p-audio-minimal-button:active {
  cursor: pointer;
  background: var(--h5p-theme-main-cta-dark);
}

.h5p-audio-inner .h5p-audio-minimal-button.h5p-audio-disabled {
  opacity: 0.4;
  cursor: inherit;
  pointer-events: none;
}

.h5p-audio-inner .h5p-audio-minimal-play:before {
  content: "\E942";
  display: inline-block;
  transform: translateX(-0.1em); /* Visually centering the icon */
  width: 1em;  
}

.h5p-audio-inner .h5p-audio-minimal-play-paused, .h5p-audio-inner .h5p-audio-minimal-pause {
  background: var(--h5p-theme-main-cta-base);
  color: var(--h5p-theme-contrast-cta);
  border-color: var(--h5p-theme-main-cta-base);
}

.h5p-audio-inner .h5p-audio-minimal-play-paused:before {
  content: "\e91f";
}

.h5p-audio-inner .h5p-audio-minimal-pause:before {
  content: "\e91e";
}

.editor .h5p-audio-transparent {
  position: relative;
  box-sizing: border-box;
  padding: -2px;
  border: 2px dashed var(--h5p-theme-main-cta-base);
  height: 100%;
}

.editor .h5p-audio-transparent:before {
  color: var(--h5p-theme-main-cta-base);
  opacity: 0.25;
  content: "\e91b";
  font-family: 'h5p-theme';
  font-size: 1.0em;
  text-decoration: none;
  padding-left: 0.25em;
}

.h5p-audio-inner.h5p-audio-transparent .h5p-audio-minimal-button {
  display: block;
  cursor: pointer;
  font-family: 'h5p-theme';
  text-decoration: none;
  border: 0;
  background: transparent;
  border-radius: 0;
}

.h5p-audio-inner.h5p-audio-transparent .h5p-audio-minimal-button:hover {
  background: var(--h5p-theme-main-cta-light);
  opacity: 0.2;
}

.h5p-audio-inner.h5p-audio-transparent .h5p-audio-minimal-button:active {
  background: var(--h5p-theme-main-cta-dark);
  opacity: 0.4;
}

.h5p-audio-inner.h5p-audio-transparent .h5p-audio-minimal-play:before, .h5p-audio-inner.h5p-audio-transparent .h5p-audio-minimal-pause:before {
  content: none;
}

